Fixed the arrow styling for the price column, the column now has a minimum width of 60px preventing the box from getting too small that the arrow goes below the text.

--- a/dev/assets/css/main.css
+++ b/dev/assets/css/main.css
@@ -85,6 +85,10 @@ p {
   margin-top: 0;
 }
 
+#arrow-fix {
+  min-width: 60px;
+}
+
 /* Class Selector */
 
 .uk-navbar-nav>li>a {
